--- a/source/documentation/tasks-outside-mtd-software.html.md.erb
+++ b/source/documentation/tasks-outside-mtd-software.html.md.erb
@@ -34,8 +34,8 @@ The following table lists the tasks customers will be able to complete through H
 | [Claim a refund](#claiming-a-refund) | In development | Yes | No | For security reasons, this functionality will be available only in HMRC online services. Discovery is pending on end of year refunds. |
 | Check refund details and status | In development | Yes | No | For security reasons, this functionality will be available only in HMRC online services. Discovery is pending on end of year refunds. |
 | Sign up to MTD as a voluntary customer for those who have previously opted out of MTD | In development | Yes | No | Availability as a software service depends on user need. |
+| Print a Self Assessment SA302 tax calculation | In development | Yes | Yes | Pending future discovery research and analysis. |
 | Change business details | Future development | Yes | No | All business customers will need access to this functionality. |
-| Print a Self Assessment SA302 tax calculation | Future development | Yes | Yes | Pending future discovery research and analysis. |
 | Request a budget payment plan | Future development | Yes | No | For security reasons, this functionality will be available only in HMRC online services. |
 | Request a time to pay | Future development | Yes | No | For security reasons, this functionality will be available only in HMRC online services. |
 | Provide bank details for future refunds | Future development | Yes | No | For security reasons, this functionality will be available only in HMRC online services. |
