--- a/source/documentation/prepare-for-mtd.html.md.erb
+++ b/source/documentation/prepare-for-mtd.html.md.erb
@@ -28,7 +28,7 @@ If an individual is a self-employed partner in a partnership, they do not need t
 - sole trader income
 - UK or foreign property income
 
-If this is the case, the individual must not include either their partner or partnership business details in the sign-up service. Instead, this income will continue to be submitted as part of their Self Assessment tax return.  There is no requirement at this time to submit partner or partnership income quarterly to HMRC.
+If this is the case, the individual must not include either their partner or partnership business details in the sign-up service. Instead, this income will continue to be submitted as part of their Self Assessment tax return.
 
 A customer can also get their appointed tax agent (for instance, an accountant or bookkeeper) to sign up on their behalf, with their permission.
 
@@ -80,15 +80,6 @@ Businesses and agents authenticate directly with us using their Government Gatew
 In the case of agents, they must sign in to their Government Gateway account with the user ID and password for their new agent services account, which was generated as part of the agent services account journey.
 
 We then generate an OAuth 2.0 access token for the software which is specific to the business or agent. The software must pass this access token in subsequent API requests as explained in authorisation of user-restricted endpoints.
-
-## Correcting income source data
-
-At sign-up to Making Tax Digital for Income Tax there is a risk that the data captured and submitted to HMRC could contain errors leading to the creation of incorrect business income source data. If a user notices that their income source data is incorrect or contains sources that have been added in error, they can contact HMRC to remove them.
-
-We advise that software should cross-check income sources quarterly using the [Retrieve Business Details endpoint](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/business-details-api/2.0/oas/page#/paths/~1individuals~1business~1details~1%7Bnino%7D~1%7BbusinessId%7D/get) to verify if any income sources have been removed. 
-
-If software sends through an update to an income source that has been removed, the software will receive a 404 error. In this case the software should call the [Retrieve Business Details endpoint](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/business-details-api/2.0/oas/page#/paths/~1individuals~1business~1details~1%7Bnino%7D~1%7BbusinessId%7D/get) to update the income source data.
-
 
 ## Making Tax Digital for Income Tax customer status
 
