--- a/source/documentation/tax-calculations.html.md.erb
+++ b/source/documentation/tax-calculations.html.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Tax calculations | Making Tax Digital for Income Tax service guide
 weight: 11
-description: How MTD-compatible software can retrieve tax calculations and take advantage of HMRC Assist.
+description: How MTD-compatible software can retrieve tax calculations.
 ---
 
 <%= partial 'documentation/partials/google_tag_manager_js' %>
@@ -41,7 +41,7 @@ To prevent the validation errors from being generated, the customer must amend t
 
 If there are no errors, the results of the calculation are available.
 
-The calculation output provides a summary of each income source (for example, self-employment, UK property, foreign property, and UK bank and building society interest) and a breakdown of allowances and reliefs applied. It also includes a breakdown of the Income Tax and NIC payable. This calculation output also includes additional income submitted by the customer through their software or [HMRC online services]( /guides/income-tax-mtd-end-to-end-service-guide/documentation/tasks-outside-mtd-software.html#hmrc-online-services) and information held by HMRC.
+The calculation output provides a summary of each income source (for example, self-employment, UK property, foreign property, and UK bank and building society interest) and a breakdown of allowances and reliefs applied. It also includes a breakdown of the Income Tax and NIC payable. This calculation output also includes additional income submitted by the customer through their software and information held by HMRC.
 
 If the customer retrieves a tax calculation during the year, it is an estimated forecast and they do not need to pay any tax at this time. They will pay tax after making their final declaration.
 
