Added survey URL

--- a/source/documentation/customer-journey.html.md.erb
+++ b/source/documentation/customer-journey.html.md.erb
@@ -64,3 +64,5 @@ The following end-to-end journey is for a Making Tax Digital for Income Tax cust
 44. HMRC receives the submission and marks the final declaration obligation as fulfilled 
 45. The software displays the confirmation of the submission (HMRC does not do this)
 46. The customer views confirmation that the return has been submitted successfully to HMRC
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
