--- a/source/documentation/make-updates-at-tax-year-end.html.md.erb
+++ b/source/documentation/make-updates-at-tax-year-end.html.md.erb
@@ -134,6 +134,8 @@ If a customer has incorrect employment details, they can delete them. This can b
 
 For some incorrect employment details held by HMRC, the customer can ask HMRC to ignore this information. In software, this is done by calling the [Ignore Employment](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-employments-income-api/2.0/oas/page#tag/Employments/paths/~1individuals~1employments-income~1%7Bnino%7D~1%7BtaxYear%7D~1%7BemploymentId%7D~1ignore/post) endpoint. This action can be reversed by using the [Unignore Employment](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-employments-income-api/2.0/oas/page#tag/Employments/paths/~1individuals~1employments-income~1%7Bnino%7D~1%7BtaxYear%7D~1%7BemploymentId%7D~1unignore/post) endpoint.
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ### Employment expenses
 
 Customers can claim tax relief on certain expenses related to their work. They can submit these expenses after the end of the tax year. For more information, refer to [Claim tax relief for your job expenses (GOV.UK).](https://www.gov.uk/tax-relief-for-employees) 
@@ -511,6 +513,8 @@ Software needs to call the [Create or Amend Student Loan Benefits in Kind endpoi
 
 The submitted figures can be retrieved using the [Retrieve Student Loan Benefits in Kind endpoint](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-employments-income-api/2.0/oas/page#tag/Student-Loan-Benefits-in-Kind/paths/~1individuals~1employments-income~1%7Bnino%7D~1%7BtaxYear%7D~1%7BemploymentId%7D~1benefit-in-kind~1student-loans/get) or deleted if found to be submitted in error through the [Delete Student Loan Benefits in Kind endpoint](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-employments-income-api/2.0/oas/page#tag/Student-Loan-Benefits-in-Kind/paths/~1individuals~1employments-income~1%7Bnino%7D~1%7BtaxYear%7D~1%7BemploymentId%7D~1benefit-in-kind~1student-loans/delete).
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ## Capture and Change Accounting Method
 
 'Accounting method' refers to a set of rules used to determine when income and expenses are accounted for in the customers’ turnover. For self-employment, a UK Property Business, or Foreign Property Business, this can either be ‘cash basis accounting’ or ‘traditional accounting’ (also known as ‘accruals’).
@@ -593,6 +597,8 @@ The customer can also delete their previously submitted annual allowance and adj
 - [Delete a Property Annual Submission](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/property-business-api/6.0/oas/page#tag/UK-or-Foreign-Property-Annual-Submission-Deletion/paths/~1individuals~1business~1property~1{nino}~1{businessId}~1annual~1{taxYear}/delete)
 - [Delete a Historic FHL UK Property Business Annual Submission](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/property-business-api/6.0/oas/page#tag/Historic-FHL-UK-Property-Business-Annual-Submission/paths/~1individuals~1business~1property~1uk~1annual~1furnished-holiday-lettings~1{nino}~1{taxYear}/delete)
 - [Delete a Historic Non-FHL UK Property Business Annual Submission](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/property-business-api/6.0/oas/page#tag/Historic-non-FHL-UK-Property-Business-Annual-Submission/paths/~1individuals~1business~1property~1uk~1annual~1non-furnished-holiday-lettings~1{nino}~1{taxYear}/delete)
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
 
 ## Submit accounting adjustments
 
@@ -825,3 +831,5 @@ Penalties must be paid within 30 days of the date on the penalty notice. Late pa
 The existing process for appeals, as described in [Appeal a Self Assessment penalty for late filing or late payment (GOV.UK)](https://www.gov.uk/guidance/check-when-to-appeal-a-self-assessment-penalty-for-late-filing-or-late-payment), will remain in place, but a provision will be made to allow a customer to appeal new late submission and late payment penalties through their digital tax account.
 
 A customer or agent may contact HMRC if they have a query about a tax decision. If they do not understand the decision, they can also get advice from HMRC or professional help.
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
