--- a/source/documentation/make-updates-during-tax-year.html.md.erb
+++ b/source/documentation/make-updates-during-tax-year.html.md.erb
@@ -34,6 +34,8 @@ A customer’s property income includes the following:
 - premiums from leasing UK land
 - inducements to take an interest in letting a property (a reverse premium)
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ## Showing customers their obligations
 
 A Making Tax Digital for Income Tax mandated or voluntary customer will have a set of obligations for each tax year. These are:
@@ -100,6 +102,8 @@ Consider the following example:
 
 After the calendar quarterly election change has been made, it will continue year on year until the customer requests a change back to standard quarterly updates. The software can use the [Create and Amend Quarterly Period Type for a Business](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/business-details-api/2.0/oas/page#/paths/~1individuals~1business~1details~1{nino}~1{businessId}~1{taxYear}/put) endpoint to allow a customer to change their periods back to standard quarters. Each year the customer makes these changes, the first period start date will be affected and will reflect the previous quarterly update type.
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ## How to submit and view in-year updates after tax year 2025
 
 Making Tax Digital for Income Tax mandated and voluntary customers must create and keep digital records of their self-employment and property business income and expenses. They must then submit summary totals of the information in their digital records to HMRC every quarter.  If they wish, they can also submit this summary-level information more frequently, for example, monthly.
@@ -165,3 +169,5 @@ When a quarterly update has been made, the customer can view a summary of the up
 - [Retrieve a Self-Employment Cumulative Period Summary](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/self-employment-business-api/5.0/oas/page#tag/Self-Employment-Cumulative-Period-Summary/paths/~1individuals~1business~1self-employment~1%7Bnino%7D~1%7BbusinessId%7D~1cumulative~1%7BtaxYear%7D/get)
 - [Retrieve a UK Property Cumulative Period Summary](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/property-business-api/6.0/oas/page#tag/UK-Property-Cumulative-Period-Summary/paths/~1individuals~1business~1property~1uk~1%7Bnino%7D~1%7BbusinessId%7D~1cumulative~1%7BtaxYear%7D/get)
 - [Retrieve a Foreign Property Cumulative Period Summary](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/property-business-api/6.0/oas/page#tag/Income-and-Expenses-Period-Summaries/paths/~1individuals~1business~1property~1foreign~1%7Bnino%7D~1%7BbusinessId%7D~1cumulative~1%7BtaxYear%7D/get)
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
