--- a/source/documentation/mtd-terminology.html.md.erb
+++ b/source/documentation/mtd-terminology.html.md.erb
@@ -30,6 +30,8 @@ If something's missing, unclear, or incorrect, you can suggest an addition, clar
 
 To suggest a change, email us at [mtd-api-ur@hmrc.gov.uk](mailto:mtd-api-ur@hmrc.gov.uk). 
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ## A-Z
 
 ### abroad
@@ -149,6 +151,8 @@ Avoid using 'Making Tax Digital' in content once someone has signed up for it (u
 ### mandation
 
 Do not use 'mandation' or 'mandated'. Say 'you must' and quote the date, if necessary, to give context. For example, say 'If you must use Making Tax Digital for Income Tax' rather than 'If you're a mandated customer'.
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
 
 ### MTD
 
@@ -327,3 +331,5 @@ Users' quarterly updates will cover an 'update period'. They will use either:
 - calendar update periods (1 April to 30 June, 1 July to 30 September, 1 October to 31 December, 1 January to 31 March)
 
 Do not use 'month end elect' or 'month end election'. Say "Choose between standard or calendar update periods" instead.
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
