--- a/source/documentation/prepare-for-mtd.html.md.erb
+++ b/source/documentation/prepare-for-mtd.html.md.erb
@@ -57,6 +57,8 @@ Software Choices is a service designed to help users [find compatible software f
 
 Only products that meet the minimum functionality standards, either individually or in conjunction with other pieces of software, are featured on the Software Choices page. Customers can also be able to search for software products compatible with Making Tax Digital for VAT.
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ## How users authorise your software
 
 Businesses and agents using your software to connect to the [Making Tax Digital for Income Tax APIs](/api-documentation/docs/api?filter=income-tax-mtd) must grant authority to your software to interact with HMRC on their behalf. We use the open standard [OAuth 2.0](https://oauth.net/2/), which involves the business or agent signing in using their Government Gateway account and following the grant authority user journey.
@@ -120,3 +122,5 @@ For further information, refer to [Find out if you can get an exemption from Mak
 ### Dormant
 
 Dormant customers are no longer required to file a Self Assessment tax return. No obligations will be created. Customers with this status may start using software and intend to file a Self Assessment tax return but have yet to inform HMRC.
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
