--- a/source/documentation/tasks-outside-mtd-software.html.md.erb
+++ b/source/documentation/tasks-outside-mtd-software.html.md.erb
@@ -46,6 +46,8 @@ Agents will be able to access Making Tax Digital for Income Tax services through
 - changing their client’s contact preference
 - setting up a time-to-pay arrangement or budget payment plan
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ### Changing contact preference
 
 To make MTD communication accessible to all customers, HMRC has provided them with a contact preference for paper or digital methods.  If customers have selected a digital preference, they will be able to view communications sent to them by HMRC through a secure mailbox accessible through HMRC online services.  HMRC encourages customers to sign up for digital messages as they will get reminders for when to make different updates and payments, which is not available through paper messages. 
@@ -105,6 +107,8 @@ If the customer has submitted updates of business income and expenses (self-empl
 
 If a customer is mandated to be in MTD, they will not be eligible to opt out. The opt-out service will be available in [HMRC online services](#hmrc-online-services) only for eligible customers.
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ## Making a payment
 
 Customers can make payments towards their liability as described in [Pay your Self Assessment tax bill (GOV.UK)](https://www.gov.uk/pay-self-assessment-tax-bill). Payments cannot currently be made through software. However, once a payment has been made, customers can view it both in software (through the [Self Assessment Accounts API](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/self-assessment-accounts-api/)) and using [HMRC online services (GOV.UK)](https://www.gov.uk/log-in-register-hmrc-online-services).
@@ -114,3 +118,5 @@ When a payment is made, the current payment service will first check to see if t
 ## Claiming a refund
 
 For current MTD customers, a refund must be claimed by contacting HMRC. Claiming a refund through [HMRC online services](#hmrc-online-services) is scheduled for future development and we will provide further information here when available.
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
