--- a/source/documentation/view-customer-self-assessment-account-information.html.md.erb
+++ b/source/documentation/view-customer-self-assessment-account-information.html.md.erb
@@ -36,3 +36,4 @@ A customer, at any time, can view the history of changes made to an individual c
 
 <a href="figures/payments-and-liabilities-rsach.svg" target="blank">Open the Retrieve a Self Assessment Charge's History diagram in a new tab</a>.
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
