--- a/source/documentation/how-to-integrate.html.md.erb
+++ b/source/documentation/how-to-integrate.html.md.erb
@@ -38,6 +38,8 @@ HMRC will be providing tailored feedback messaging through nudges and prompts th
 
 In addition, software providers may wish to offer other functionality over and above the minimum standards. This could include automated functionality, for example, automated quarterly updates. Where this is the case, customers remain legally responsible for meeting their quarterly obligations, and HMRC would expect appropriate safeguards to be built in.
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ## Process for being granted Production access
 
 ### Fraud prevention headers
@@ -142,6 +144,8 @@ For access to updated APIs (that is, new versions), we do not generally require 
 
 > **Note:** It is important to build relevant error responses in your software to handle exceptions.
 
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
+
 ## Sandbox testing
 
 Some APIs in the Sandbox environment allow software to test different scenarios by including ‘Gov-Test-Scenario’ headers in requests. The [Making Tax Digital for Income Tax API documentation](https://developer.service.hmrc.gov.uk/api-documentation/docs/api?filter=income-tax-mtd) provides more information about how to use these test scenarios.
@@ -200,6 +204,8 @@ To test the journey for making a Self-Employment or Property Business submission
 <a href="figures/stateful-bsas-journey.svg" target="blank"><img src="figures/stateful-bsas-journey.svg" alt="Stateful journey to request a Business Source Adjustable Summary" style="width:720px;" /></a>
 
 <a href="figures/stateful-bsas-journey.svg" target="blank">Open the stateful journey diagram in a new tab.</a>
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
 
 ## Multiple agents
 
@@ -343,3 +349,5 @@ In previous releases, deprecation status could be indicated with a 'Deprecation'
 ### Retiring APIs
 
 After an API has been deprecated for the amounts of time indicated above, it can be retired and the endpoints and documentation will be removed. Ensure that your application does not rely on any deprecated APIs.
+
+> Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
