--- a/source/documentation/tax-calculations.html.md.erb
+++ b/source/documentation/tax-calculations.html.md.erb
@@ -27,7 +27,7 @@ When a customer requests to view an existing calculation, the software should ca
 
 If the software retrieves a calculation, it will cover only the period up to their last submission date, not the calculation retrieval date. For example, if a customer submitted their update to 1 July 2023 and they requested a calculation on 30 July 2023, they will receive a calculation only up to 1 July 2023.
 
-Before presenting your customer with an in-year tax calculation, the [minimum functionality standards](/guides/income-tax-mtd-end-to-end-service-guide/documentation/how-to-integrate.html#minimum-functionality-standards) state that a disclaimer must be presented. This disclaimer is returned through the [Individual Calculations API](/api-documentation/docs/api/service/individual-calculations-api/) as ‘This calculation is only based on information HMRC have received about your income and expenses to 20XX-XX-XX. This may change as we receive further information about you during the tax year’. Software providers can choose to use this exact disclaimer or design their own.
+Before presenting your customer with an in-year tax calculation, the [minimum functionality standards](/guides/income-tax-mtd-end-to-end-service-guide/documentation/how-to-integrate.html#minimum-functionality-standards) state that a disclaimer must be presented. Software providers can choose to use ‘This calculation is only based on information HMRC have received about your income and expenses to 20XX-XX-XX. This may change as we receive further information about you during the tax year’ or design their own.
 
 > Your feedback matters! Share your thoughts and help us improve. Click [here](https://survey.take-part-in-research.service.gov.uk/jfe/form/SV_1HNqtnocN4MeRme) to complete a survey.
 
