--- a/source/documentation/make-updates-at-tax-year-end.html.md.erb
+++ b/source/documentation/make-updates-at-tax-year-end.html.md.erb
@@ -699,7 +699,7 @@ After a customer is confident that they have submitted all the required income t
 
 > [Here the vendor can decide how to manage the actual declaration in the user interface, for example a tick box, confirm button or other method]
 
-> I declare that the information and self-assessment I have filed are (taken together) correct and complete to the best of my knowledge. I understand that I may have to pay financial penalties and face prosecution if I give false information.”
+> I declare that the information and tax return I have submitted are (taken together) correct and complete to the best of my knowledge. I understand that I may have to pay financial penalties and face prosecution if I give false information.”
 
 > **Declaration for Agents**
 
