--- a/source/documentation/tax-calculations.html.md.erb
+++ b/source/documentation/tax-calculations.html.md.erb
@@ -69,7 +69,7 @@ The report contains targeted feedback based on what the customer advises HMRC in
 
 An HTTP 200 success code is returned and the targeted message, recommended action and guidance links are within the JSON for the software to display.
 
-> The user must allow sufficient time for the tax calculation to be generated before creating an Assist report, as generating the Assist report prior to the tax calc will return an HTTP 404 error code.
+> Software must allow sufficient time for the tax calculation to be generated before creating an Assist report, as generating the Assist report prior to the tax calculation will return an HTTP 404 error code.
 
 ### Acknowledge an HMRC Self Assessment assist report
 
